script/less/index.less
@import "common.main.inc.less";
@import "bootstrap.precompile/bootstrap-responsive.less";
@import (less) "../css/onepage-scroll.css";

//// disable elastic scrolling in safari
//// http://stackoverflow.com/questions/8150191/disable-elastic-scrolling-in-safari
//html {
//  height: 100%;
//  width: 100%;
//  overflow: hidden;
//}
//
//body {
//  height: 100%;
//  width: 100%;
//  overflow: auto;
//}


#content {
  max-width: 500px;
  width: auto;
}

.page .wrapper {
  .l-center;
  max-height: 30%;
}
@media (max-width:767px) {
  .page .wrapper {
    max-height: 90%;
    max-width: 90%;
  }
}

#name {
  //font-family: 'Alegreya SC', serif;
  font-family: 'Cinzel Decorative', cursive;
  font-size: 3rem;
  line-height: 3.5rem;
}
#description {
  font-size: 1.5rem;
  line-height: 2rem;
}
.portrait {
  margin-top: 10px;
  text-align: center;
}

@media (max-width:767px) {
  .portrait {
    img {
      max-height: 50%;
    }
  }
}


.project-title,
.project-slogan {
  display: inline-block;
  line-height: 1rem;
}
.project-title {
  font-size: 2rem;
}
.project-slogan small {
  font-size: 1rem;
}
.project-description {
  font-size: 1.2rem;
  line-height: 1.9rem;

  padding-right: 10px;
}

@shadow: inset 0px 0px 80px 50px white, 0px 0px 80px 50px white;
.project-media {
  width: 400px;
  height: 300px;
  .radius(300px);

  .l-center;

  -webkit-filter: blur(1px); // grayscale(0.1); // brightness(110%);

  -moz-box-shadow:@shadow;
  -webkit-box-shadow:@shadow;
  box-shadow:@shadow;

  z-index: -1;
}
.project-media:before {
  content: ' ';
  width: 400px;
  height: 300px;
  .radius(300px);

  position: absolute;
  top: -1px;
  left: -1px;

  -moz-box-shadow:@shadow;
  -webkit-box-shadow:@shadow;
  box-shadow:@shadow;
}

#controls {
  position: fixed;

  // vertical_bar
//  -moz-transform: rotate(90deg);
//  -webkit-transform: rotate(90deg);
//  transform: rotate(90deg);

  display: none; // only show for mobile
}
#page_control {
  -webkit-appearance: none;
  background-color: transparent;
  height: 1px;
}
#page_control::-webkit-slider-thumb {
  -webkit-appearance: none;
  background-color: transparent;
  border-color: #d3d3d3;
  border-width: 1px;
  @size: 40px;
  width: @size;
  height: @size;
  .radius(@size);

  @ring-color: #d3d3d3; //rgba(255,255,255, 1);
  @ring-size-start: 0px;
  @ring-end-start: 8px;
  @-webkit-keyframes breath {
    0%   { -webkit-box-shadow: 0 0 @ring-size-start @ring-size-start @ring-color; }
    50%   { -webkit-box-shadow: 0 0 @ring-end-start @ring-end-start @ring-color; }
    100%   { -webkit-box-shadow: 0 0 @ring-size-start+1px @ring-size-start+1px @ring-color; }
  }
  -webkit-animation: breath 4s infinite ease-in-out;
}
//#page_control.active {
//  background-color: #d3d3d3;
//}
//#page_control.active::-webkit-slider-thumb {
//  border-color: #d3d3d3;
//}

